@@ -1,44 +1,0 @@
-<printer id="printer/Test-XX100">
-  <make>Test</make>
-  <model>XX100</model>
-  <mechanism>
-    <color />
-    <resolution>
-      <dpi>
-        <x>1200</x>
-        <y>1200</y>
-      </dpi>
-    </resolution>
-  </mechanism>
-  <lang>
-    <pjl />
-  </lang>
-  <autodetect>
-    <general>
-      <ieee1284>MFG:Test;MDL:RICOH XX100 PS3;</ieee1284>
-      <manufacturer>Test</manufacturer>
-      <model>RICOH XX100 PS3</model>
-    </general>
-  </autodetect>
-  <functionality>A</functionality>
-  <driver>Test</driver>
-  <drivers>
-    <driver>
-      <id>Test</id>
-      <ppd>PPD/Test/Test-XX100-PXL.ppd</ppd>
-    </driver>
-  </drivers>
-  <comments>
-    <en>
-      This database entry was automatically generated
-      from the PPD file for this printer.&lt;p&gt;
-
-      Maximum paper width: 11.7 inches / 29.7 cm
-      (Wide format printer)&lt;p&gt;
-
-      Printing engine speed: 28 pages/min&lt;p&gt;
-
-
-    </en>
-  </comments>
-</printer>
