@@ -1,6 +1,11 @@
 2010-01-18  OpenPrinting Web Server <webmaster@openprinting.org>
 
 	* db/source/printer/Test-XX100.xml:
+	  Entries removed from the MySQL database.
+
+2010-01-18  OpenPrinting Web Server <webmaster@openprinting.org>
+
+	* db/source/printer/Test-XX100.xml:
 	  New entries added to the MySQL database.
 
 	* db/source/printer/Lexmark-C780.xml,
